--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react": "^7.6.1",
     "express": "^4.16.2",
     "graphql": "0.11.7",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^2.21.0",
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.5",
